--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -1,4 +1,37 @@
 .container {
     display: flex;
-    justify-content: center;
+}
+
+.contentContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: grey 1px solid;
+    border-radius: 8px;
+    margin: 32px 16px;
+    width: 500px;
+    height: 500px;
+    overflow: hidden;
+}
+
+.ui.header.subHeader {
+    margin: 16px 0
+}
+
+.headerContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: lightgrey;
+    padding: 16px 0;
+    width: 100%;
+}
+
+.avatarUserContainer {
+    margin-top: 48px;
+}
+
+.formContainer {
+    width: 90%;
+    flex: 1;
 }
