--- a/src/pages/NotFound/styles.css
+++ b/src/pages/NotFound/styles.css
@@ -1,4 +1,7 @@
-.container {
+.notFoundContainer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    margin-top: 10%;
 }
