--- a/src/pages/QuestionDetails/styles.css
+++ b/src/pages/QuestionDetails/styles.css
@@ -2,3 +2,9 @@
     display: flex;
     justify-content: center;
 }
+
+.questionContainer {
+    width: 500px;
+    margin-top: 42px;
+    padding: 0 16px;
+}
