--- a/src/pages/LeaderBoard/styles.css
+++ b/src/pages/LeaderBoard/styles.css
@@ -2,3 +2,9 @@
     display: flex;
     justify-content: center;
 }
+
+.leaderBoardContainer {
+    width: 600px;
+    margin-top: 32px;
+    padding: 0 16px
+}
